--- a/app/src/main/res/layout/activity_test_swipe.xml
+++ b/app/src/main/res/layout/activity_test_swipe.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:directionMode="top"
+    app:maskAlpha="255"
+    app:swipeBackFactor="0.2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
