--- a/app/src/main/res/layout/activity_test_swipe.xml
+++ b/app/src/main/res/layout/activity_test_swipe.xml
@@ -23,5 +23,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:srcCompat="@color/colorAccent"/>
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="368dp" android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </example.test.phong.testswipeback.SwipeBackLayout>
